--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity android:name=".FachLogic.BodyParts" />
         <activity android:name=".FachLogic.BodyPartActivity"/>
+        <activity android:name=".FachLogic.WorkoutActivity"/>
         <activity
             android:name=".FachLogic.MainActivity"
             android:exported="true">
